tests/snapshots/cli_snapshots__accounts_list_filter_type_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"accounts\", \"list\", \"--account-type\", \"credit\"])"
---
╭────────┬───────────┬────────┬─────────────┬──────┬───────────╮
│ id     ┆ name      ┆ type   ┆ sub_type    ┆ mask ┆ balance   │
╞════════╪═══════════╪════════╪═════════════╪══════╪═══════════╡
│ acct_2 ┆ Amex Gold ┆ credit ┆ credit card ┆ 5678 ┆ -$1234.56 │
╰────────┴───────────┴────────┴─────────────┴──────┴───────────╯
