tests/snapshots/cli_snapshots__accounts_list_show_hidden_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"accounts\", \"list\", \"--show-hidden\"])"
---
╭────────┬────────────────┬────────────┬─────────────┬──────┬───────────╮
│ id     ┆ name           ┆ type       ┆ sub_type    ┆ mask ┆ balance   │
╞════════╪════════════════╪════════════╪═════════════╪══════╪═══════════╡
│ acct_1 ┆ Chase Checking ┆ depository ┆ checking    ┆ 1234 ┆ $5432.10  │
├╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤
│ acct_2 ┆ Amex Gold      ┆ credit     ┆ credit card ┆ 5678 ┆ -$1234.56 │
├╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤
│ acct_3 ┆ Old Savings    ┆ depository ┆ savings     ┆ 9999 ┆ $100.00   │
╰────────┴────────────────┴────────────┴─────────────┴──────┴───────────╯
