tests/snapshots/cli_snapshots__networth_current_table_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"networth\", \"current\"])"
---
╭───────────┬────────────╮
│ key       ┆ value      │
╞═══════════╪════════════╡
│ date      ┆ 2025-12-15 │
├╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ assets    ┆ $125000.50 │
├╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ debt      ┆ $45000.25  │
├╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ net_worth ┆ $80000.25  │
╰───────────┴────────────╯
